Entity filter in the log viewer

REVIEW: 104055
BUG: 294651